<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/action_settings">

    <EditTextPreference
        android:defaultValue="@string/settings_number_of_items_default"
        android:hint="@string/hint_num_of_items"
        android:inputType="numberDecimal"
        android:key="@string/settings_number_of_items_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_number_of_items_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

</PreferenceScreen>