<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/ic_title_home_steam_news" />
        <item
            android:id="@+id/steam_trends"
            android:icon="@drawable/ic_menu_steam_trends"
            android:title="@string/ic_title_steam_trends" />
        <item
            android:id="@+id/discord_bot"
            android:icon="@drawable/ic_menu_discord_bot"
            android:title="@string/ic_title_discord_bot" />
        <item
            android:id="@+id/main_sign_in"
            android:icon="@drawable/ic_menu_discord_bot"
            android:title="@string/ic_title_sign_in" />
    </group>
</menu>
